--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     ]
   ],
   "_from": "../d-117103-95168-xrxsjw.uce4s4i/package.tgz",
-  "_id": "language-lisp@0.2.0",
+  "_id": "language-lpcode@0.2.0",
   "_inCache": true,
-  "_location": "/language-lisp",
+  "_location": "/language-lpcode",
   "_phantomChildren": {},
   "_requested": {
     "raw": "/private/var/folders/9t/kh4htslx7c1b2pnrd8b63kxw0000gn/T/d-117103-95168-xrxsjw.uce4s4i/package.tgz",
@@ -36,7 +36,7 @@
   "_spec": "/private/var/folders/9t/kh4htslx7c1b2pnrd8b63kxw0000gn/T/d-117103-95168-xrxsjw.uce4s4i/package.tgz",
   "_where": "/private/var/folders/9t/kh4htslx7c1b2pnrd8b63kxw0000gn/T/apm-install-dir-117103-95168-nskw5i.92e6p6i529",
   "bugs": {
-    "url": "https://github.com/enriquefernandez/language-lisp/issues"
+    "url": "https://github.com/InnovateMan/language-lpcode/issues"
   },
   "dependencies": {},
   "description": "LPCode for Autohome",
@@ -44,7 +44,7 @@
   "engines": {
     "atom": ">0.50.0"
   },
-  "homepage": "https://github.com/enriquefernandez/language-lisp#readme",
+  "homepage": "https://github.com/InnovateMan/language-lpcode#readme",
   "license": "MIT",
   "name": "language-lpcode",
   "optionalDependencies": {},
@@ -53,7 +53,7 @@
   "readmeFilename": "README.md",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/enriquefernandez/language-lisp.git"
+    "url": "git+https://github.com/InnovateMan/language-lpcode"
   },
   "version": "0.2.0"
 }
